notification/deployment-ws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-ws
  template:
    metadata:
      labels:
        app: notification-ws
    spec:
      containers:
        - name: notification-ws
          image: ghcr.io/emso-group/notification/ws:4292f903e57e5a7502a83e4904f4b7793fae0d1d
          ports:
            - name: ws
              containerPort: 3002
      imagePullSecrets:
        - name: notification-secret
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: magnum.openstack.org/nodegroup
                    operator: In
                    values:
                      - ng-chat
