notification/ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-ws
spec:
  selector:
    app: notification-ws
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3002
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3002
  type: ClusterIP
